Add new asset volumes and update base template for favicon and logo integration
- Created new asset volumes for Care Images, Content Images, Favicons, Forms, Hero Images, Icons, Menus, Price List, Project Images, Project Logos, Publicaties, Service Images, Site Logos, and Staff Photos.
- Updated base.twig to dynamically load site name and favicon from global settings.
- Modified header.twig to display site logo from global settings.
- Added various image files for logos, favicons, and other assets.
- Removed unnecessary .gitignore file from assets directory.

--- a/templates/partials/_header.twig
+++ b/templates/partials/_header.twig
@@ -1,12 +1,12 @@
-{% block header %}
-  <div class="header">
-   <div class="header-left">
+{% set siteSettings = craft.globalSets()
+    .handle('siteInstellingen')
+    .one() %}
 
-    <img src="/images/sint-coleta-logo.png" alt="">
-    <h1>hey</h1>
-   </div>
+{% if siteSettings and siteSettings.siteLogo|length %}
+  {% set logo = siteSettings.siteLogo.one() %}
+  <a href="{{ siteUrl }}">
+    <img src="{{ logo.url }}" alt="Logo {{ siteName }}">
+    
 
-  </div>
-
-
-{% endblock %}
+  </a>
+{% endif %}
