--- a/templates/contact/_entry.twig
+++ b/templates/contact/_entry.twig
@@ -1,6 +1,7 @@
 {% extends "base/base.twig" %}
- {% block content %} <h1>Contact</h1> 
- {% if entry.eMailadresContactPagina %} 
- <p>{{ entry.eMailadresContactPagina }}</p>
-  {% endif %}
-   {% endblock %}
+{% block content %}
+	<h1>Contact</h1>
+	{% if entry.eMailadresContactPagina %}
+		<p>{{ entry.eMailadresContactPagina }}</p>
+	{% endif %}
+{% endblock %}
