--- a/templates/ouderen-zorg/_entry.twig
+++ b/templates/ouderen-zorg/_entry.twig
@@ -1,5 +1,7 @@
 {% extends "base/base.twig" %}
 
 {% block content %}
-  <h1>hello</h1>
+	<article>
+		<h1>{{ entry.title }}</h1>
+	</article>
 {% endblock %}
