--- a/templates/base/base.twig
+++ b/templates/base/base.twig
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>{{ siteName }}</title>
+		<title>{{ siteName }}</title>
 
-  {# Global set laden voor favicon & logo #}
-  {% set siteSettings = craft.globalSets().handle('siteInstellingen').one() %}
+		{# Global set laden voor favicon & logo #}
+		{% set siteSettings = craft.globalSets().handle('siteInstellingen').one() %}
 
-  {# Favicons tonen als die bestaat #}
-  {% if siteSettings and siteSettings.favicons|length %}
-    {% set favicons = siteSettings.favicons.one() %}
-    <link rel="icon" type="{{ favicons.mimeType }}" href="{{ favicons.url }}">
-  {% endif %}
+		{# Favicons tonen als die bestaat #}
+		{% if siteSettings and siteSettings.favicons|length %}
+			{% set favicons = siteSettings.favicons.one() %}
+			<link rel="icon" type="{{ favicons.mimeType }}" href="{{ favicons.url }}">
+		{% endif %}
+		<link rel="stylesheet" href="{{ url('assets/css/styles.css') }}">
+		<link rel="stylesheet" href="{{ url('assets/css/layout.css') }}">
+		<link rel="stylesheet" href="{{ url('assets/css/partials.css') }}">
+		<link rel="stylesheet" href="{{ url('assets/css/fonts.css') }}">
 
-  <link rel="stylesheet" href="{{ url('assets/css/layout.css') }}">
-  <link rel="stylesheet" href="{{ url('assets/css/styles.css') }}">
-  <link rel="stylesheet" href="{{ url('assets/css/partials.css') }}">
-</head>
-<body>
-  {% include 'partials/_header.twig' %}
-  
-  <main>
-    {% block content %}
-    {% endblock %}
-  </main>
-</body>
+
+	</head>
+	<body>
+		{% include 'partials/_header.twig' %}
+
+		<main>
+			{% block content %}{% endblock %}
+		</main>
+	</body>
 </html>
