--- a/web/assets/css/partials/header.css
+++ b/web/assets/css/partials/header.css
@@ -23,9 +23,11 @@ header {
     display: flex;
     justify-content: end;
     & .header-contact__btn {
-      background-color: brown;
-      padding: 0.5rem 1rem;
+      background-color: var(--primary-color);
+      border-radius: 1rem;
+      padding: 0.5rem 1.5rem;
       color: black;
+      text-decoration: none;
     }
   }
 }
