--- a/templates/partials/_header.twig
+++ b/templates/partials/_header.twig
@@ -14,7 +14,7 @@
 		<a class="header-nav__link" href="{{ url('vacatures') }}">Vacatures</a>
 		<a class="header-nav__link" href="{{ url('algemeen') }}">Algemene Info</a>
 		<a class="header-nav__link" href="{{ url('ouderen-zorg') }}">Residentiële Ouderenzorg</a>
-		<a class="header-nav__link" href="{{ url('diensten') }}">Dienstverlening</a>
+		<a class="header-nav__link" href="{{ url('dienstverlening') }}">Dienstverlening</a>
 	</nav>
 
 	<div class="header-contact">
