Add contact form functionality and related assets; update styles and templates

--- a/templates/base/base.twig
+++ b/templates/base/base.twig
@@ -18,6 +18,7 @@
 		<link rel="stylesheet" href="{{ url('assets/css/layout.css') }}">
 		<link rel="stylesheet" href="{{ url('assets/css/partials.css') }}">
 		<link rel="stylesheet" href="{{ url('assets/css/fonts.css') }}">
+		<link rel="stylesheet" href="{{ url('assets/css/reset.css') }}">
 
 
 	</head>
