--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -10,3 +10,11 @@
   --font-family: "Rubik", sans-serif;
   --font-size-base: 16px;
 }
+
+.small-btn {
+  border-radius: 1rem;
+  background-color: var(--secondary-color);
+  border: none;
+  color: white;
+  padding: 0.5rem 1.5rem;
+}
