--- a/web/assets/css/pages/visie.css
+++ b/web/assets/css/pages/visie.css
@@ -5,7 +5,7 @@
   height: auto;
   padding: 4rem 0;
   align-items: center;
-
+  min-height: 80vh;
   & .visie-text {
     width: 70%;
     border-radius: 1rem;
