--- a/web/assets/css/pages/home.css
+++ b/web/assets/css/pages/home.css
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
   background-position: 59.22% 24.9%;
   background-size: 141.44% 229.63%;
-  min-height: 581px; /* Figma hoogte */
+  min-height: 581px;
   display: flex;
   align-items: center;
   justify-content: center;
