--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -1,8 +1,9 @@
 @import "pages/contact.css";
 @import "pages/home.css";
 @import "pages/visie.css";
+@import "pages/werknemers.css";
 @import "utilities.css";
-
+@import "partials/footer.css";
 :root {
   --primary-color: #cab37f;
   --secondary-color: #ee7919;
