--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -1,6 +1,7 @@
 @import "pages/contact.css";
 @import "pages/home.css";
 @import "pages/visie.css";
+@import "pages/diensten.css";
 @import "pages/werknemers.css";
 @import "utilities.css";
 @import "partials/footer.css";
