--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -3,6 +3,7 @@
 @import "pages/visie.css";
 @import "pages/diensten.css";
 @import "pages/werknemers.css";
+@import "pages/vacatures.css";
 @import "utilities.css";
 @import "partials/footer.css";
 :root {
