--- a/web/assets/css/pages/visie.css
+++ b/web/assets/css/pages/visie.css
@@ -1,5 +1,5 @@
 .visie {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   display: flex;
   justify-content: center;
   height: auto;
