--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -2,6 +2,7 @@
 @import "pages/home.css";
 @import "pages/visie.css";
 @import "pages/diensten.css";
+@import "pages/projecten.css";
 @import "pages/werknemers.css";
 @import "pages/vacatures.css";
 @import "utilities.css";
