--- a/templates/contact/_entry.twig
+++ b/templates/contact/_entry.twig
@@ -23,6 +23,8 @@
 					{% else %}
 						<p>(Geen adres ingesteld)</p>
 					{% endif %}
+
+
 					<hr>
 
 					<h3>Stuur ons een bericht</h3>
@@ -43,6 +45,10 @@
 						</div>
 
 
+					</div>
+					<div class="icon-wrap">
+						<img src="/assets/icons/facebook.svg" alt="">
+						<a href="https://www.facebook.com/p/WZC-Sint-Coleta-100064320356901/?locale=nl_BE">Bekijk hier ook onze fotos!</a>
 					</div>
 				</div>
 			</div>
