Add telephone link to team member contact information

--- a/templates/werknemers/index.twig
+++ b/templates/werknemers/index.twig
@@ -73,6 +73,14 @@
 							{% if m.eMailadres %}
 								<a href="mailto:{{ m.eMailadres }}">E-mail</a>
 							{% endif %}
+							{% if m.telefoonnummer %}
+								{# verwijder spaties, / en - voor de tel: link #}
+								{% set telHref = 'tel:' ~ (m.telefoonnummer|replace({' ': '', '/': '', '-': ''})) %}
+								{% if m.eMailadres %}&nbsp;|&nbsp;
+								{% endif %}
+								<a href="{{ telHref }}">Tel:
+									{{ m.telefoonnummer }}</a>
+							{% endif %}
 						</p>
 					</li>
 				{% endfor %}
